POST endpoint excluded

--- a/netlify.toml
+++ b/netlify.toml
@@ -36,7 +36,7 @@
   to = "/index.html"
   status = 200
   force = false
-  conditions = { NOT = [{ path = "/.netlify/*" }] }
+  conditions = { NOT = [{ method = "POST" }, { path = "/.netlify/*" }] }
 
 [notifications]
   [[notifications.form_submission]]
